Fix Multiselect alignment in Firefox (#577).

--- a/packages/react-widgets/src/less/multiselect.less
+++ b/packages/react-widgets/src/less/multiselect.less
@@ -13,6 +13,10 @@
     padding: 0 @input-padding-horizontal;
   }
 
+  .rw-widget-picker > div {
+    vertical-align: top;
+  }
+
   & .rw-select {
     &,
     &:hover,
